java_library(
    name = "lib",
    srcs = glob(
        ["*.java"],
        exclude = ["AtmosView.java"],
    ),
    visibility = [
        "//src/test/java/ca/ubc/cs/sanchom/atmosview:__subpackages__",
    ],
    deps = [
        "@maven//:com_toedter_jcalendar",
    ],
)

java_binary(
    name = "AtmosView",
    srcs = ["AtmosView.java"],
    main_class = "ca.ubc.cs.sanchom.atmosview.AtmosView",
    deps = [
        ":lib",
    ],
)
